--- a/src/components/Navbar/NavTop.scss
+++ b/src/components/Navbar/NavTop.scss
@@ -1,3 +1,5 @@
+/*
+
 .app__navbar {
     display: flex;
     align-items: center;
@@ -82,4 +84,47 @@
     }
    
       
+}
+
+*/
+
+.app__navbar {
+    box-sizing: border-box;
+
+    width: 100%;
+    height: 149px;
+
+    background: white;
+    border-bottom: 1px solid #DDDDDD;
+    box-shadow: 0px 4px 4px rgba( 0, 0, 0, 0.25);
+
+    .app__navbar-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 0px 0p 0px 43px;
+        gap: 43px;
+
+        position: absolute;
+        width: 100%;
+        height: 148px;
+    
+
+        .app__navbar-logo {
+            
+
+            img {
+                display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+            padding: 0px 0.26px 0p 0.26px;
+
+                width: 316px;
+            height: 84px;
+
+            }
+
+            
+        }
+    }
 }
