--- a/src/components/Navbar/NavBot.css
+++ b/src/components/Navbar/NavBot.css
@@ -7,8 +7,7 @@
 .app__navbot .app__navbot-links {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
-  padding: 0px 501px 8px 0px;
+  justify-content: center;
   gap: 30px;
 }
 .app__navbot .app__navbot-links .app__navbot-livros {
