--- a/src/components/Navbar/NavBot.scss
+++ b/src/components/Navbar/NavBot.scss
@@ -10,8 +10,7 @@
 
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
-        padding: 0px 501px 8px 0px;
+        justify-content: center;
 
         gap: 30px;
 
