--- a/src/components/Navbar/NavTop.css
+++ b/src/components/Navbar/NavTop.css
@@ -5,7 +5,7 @@
   border-bottom: 1px solid #DDDDDD;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   /*
           .app__navbar-search {
 
@@ -57,7 +57,26 @@
           }
   */
 }
+.app__navbar .app__navbar-logo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.app__navbar .app__navbar-logo img {
+  width: 100px;
+  height: 100px;
+}
+.app__navbar .app__navbar-search {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.app__navbar .app__navbar-search .app__navbar-bar {
+  display: flex;
+}
 .app__navbar .app__navbar-container {
+  display: flex;
+  justify-content: center;
   width: 1109px;
   height: 148px;
 }
