--- a/src/components/Navbar/NavTop.scss
+++ b/src/components/Navbar/NavTop.scss
@@ -7,10 +7,49 @@
         box-shadow: 0px 4px 4px rgba( 0, 0, 0, 0.25);
 
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
+
+       
+
+        .app__navbar-logo {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+                img {
+
+                    
+                   
+                    width: 100px;
+                    height: 100px;
+
+                    
+
+                  
+
+            
+            }
+        }
+
+        .app__navbar-search {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            .app__navbar-bar {
+                display: flex;
+            }
+        }
+    
+        
+
+
+
 
 
             .app__navbar-container {
+                display: flex;
+                justify-content: center;
                 width: 1109px;
                 height: 148px;
 
