--- a/src/components/Navbar/NavTop.scss
+++ b/src/components/Navbar/NavTop.scss
@@ -71,22 +71,16 @@
 
                         padding: 11px 7px 11px 10px;
                         width: 550px;
-                        height: 20px;
+                        height: 30px;
 
                         border: none;
                         border-radius: 50%;
-                        
-                        
-                        
-                        outline: none;
-                                
-                    }
 
-                    
-                    
+                        outline: none;
+                    }
                 }
 
-                .app__navbar-buttonc{
+                .app__navbar-buttonc {
                     width: 90px;
                     display: flex;
                     justify-content: center;
@@ -95,6 +89,15 @@
                    
                     .app__navbar-button {
                         color: #fff;
+                        
+                        cursor: pointer;
+
+                        transition: all 0.3s ease-in-out;
+                    }
+
+                    .app__navbar-button:hover {
+                        color: gold;
+                        background: #fff;
                     }
 
 
@@ -113,25 +116,8 @@
                         
                     }
                 }
-
-                
-                
-
             }
-
-            
-            
-
-
-
-            
         }
-    
-        
-
-
-
-
 
             .app__navbar-container {
                 display: flex;
@@ -219,8 +205,6 @@
                     }
 
                 }
-
-                    
             }
         }
 
