--- a/src/components/Navbar/NavTop.css
+++ b/src/components/Navbar/NavTop.css
@@ -98,24 +98,21 @@
   padding: 0px 53px 1px 1px;
 }
 .app__navbar .app__navbar-container .app__navbar-userbox ul li {
+  padding-left: 15px;
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  padding: 0px 53px 1px 1px;
-  width: 239px;
-  height: 48px;
+  align-items: center;
+  justify-content: left;
+  width: 240px;
+  height: 49px;
   border-width: 0px 0px 1px 1px;
   border-style: solid;
   border-color: #DDDDDD;
 }
 .app__navbar .app__navbar-container .app__navbar-userbox ul a {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  padding: 11px 42px 12px 28px;
   gap: 10px;
-  width: 185px;
-  height: 30px;
   text-decoration: none;
   font-size: 1rem;
   line-height: 25px;
