--- a/src/components/Navbar/NavTop.scss
+++ b/src/components/Navbar/NavTop.scss
@@ -119,7 +119,7 @@
             }
         }
 
-            .app__navbar-container {
+        .app__navbar-container {
                 display: flex;
                 justify-content: center;
                 width: 1109px;
@@ -141,14 +141,16 @@
                         }
 
                     li {
+
+                        padding-left: 15px;
             
                         display: flex;
-                        flex-direction: row;
-                        align-items: flex-start;
-                        padding: 0px 53px 1px 1px;
+                        align-items: center;
+                        justify-content: left;
+                        
 
-                        width: 239px;
-                        height: 48px;
+                        width: 240px;
+                        height: 49px;
 
                         border-width: 0px 0px 1px 1px;
                         border-style: solid;
@@ -157,13 +159,9 @@
 
                     a {
                         display: flex;
-                        flex-direction: row;
+                        justify-content: center;
                         align-items: center;
-                        padding: 11px 42px 12px 28px;
                         gap: 10px;
-
-                        width: 185px;
-                        height: 30px;
 
                         text-decoration: none;
                         font-size: 1rem;
