--- a/src/components/Navbar/NavTop.css
+++ b/src/components/Navbar/NavTop.css
@@ -49,8 +49,9 @@
   width: 550px;
   height: 30px;
   border: none;
-  border-radius: 50%;
+  border-radius: 50px;
   outline: none;
+  background: rgba(221, 221, 221, 0);
 }
 .app__navbar .app__navbar-search .app__navbar-box .app__navbar-buttonc {
   width: 90px;
@@ -61,11 +62,13 @@
 .app__navbar .app__navbar-search .app__navbar-box .app__navbar-buttonc .app__navbar-button {
   color: #fff;
   cursor: pointer;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 .app__navbar .app__navbar-search .app__navbar-box .app__navbar-buttonc .app__navbar-button:hover {
   color: gold;
   background: #fff;
+  width: 85%;
+  height: 85%;
 }
 .app__navbar .app__navbar-search .app__navbar-box .app__navbar-buttonc button {
   display: flex;
@@ -77,6 +80,30 @@
   background: gold;
   border: 1px solid gold;
   border-radius: 50px;
+}
+.app__navbar .app__navbar-dropdown {
+  display: flex;
+  align-items: center;
+}
+.app__navbar .app__navbar-dropdown select {
+  padding-left: 10px;
+  width: 180px;
+  height: 45px;
+  border: none;
+  background: rgba(221, 221, 221, 0);
+  outline: none;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 1.2rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.app__navbar .app__navbar-dropdown option {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 1rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
 }
 .app__navbar .app__navbar-container {
   display: flex;
