--- a/src/components/Navbar/NavTop.scss
+++ b/src/components/Navbar/NavTop.scss
@@ -1,4 +1,5 @@
-    .app__navbar {    
+  
+   .app__navbar {    
         width: 100%;
         height: 149px;
     
@@ -17,17 +18,8 @@
             justify-content: space-between;
 
                 img {
-
-                    
-                   
                     width: 100px;
                     height: 100px;
-
-                    
-
-                  
-
-            
             }
         }
 
@@ -74,9 +66,11 @@
                         height: 30px;
 
                         border: none;
-                        border-radius: 50%;
+                        border-radius: 50px;
 
                         outline: none;
+
+                        background: rgba(221, 221, 221, 0);
                     }
                 }
 
@@ -92,12 +86,15 @@
                         
                         cursor: pointer;
 
-                        transition: all 0.3s ease-in-out;
+                        transition: all 0.2s ease-in-out;
                     }
 
                     .app__navbar-button:hover {
                         color: gold;
                         background: #fff;
+                        width: 85%;
+                        height: 85%;
+                        
                     }
 
 
@@ -118,6 +115,45 @@
                 }
             }
         }
+
+        .app__navbar-dropdown {
+            display: flex;
+            align-items: center;
+
+            select {
+                padding-left: 10px;
+
+                width: 180px;
+                height: 45px;
+
+                border: none;
+                background: rgba(221, 221, 221, 0);
+
+                outline: none;
+
+                
+
+                color:rgba( 0, 0, 0, 0.5);
+                font-size: 1.2rem;
+                font-family: 'Roboto', sans-serif;
+                font-weight: 600;
+                text-transform: uppercase;
+            }
+
+            option {
+                color:rgba( 0, 0, 0, 0.5);
+                font-size: 1rem;
+                font-family: 'Roboto', sans-serif;
+                font-weight: 400;
+                text-transform: uppercase;
+                
+            }
+
+            
+           
+            
+        }
+
 
         .app__navbar-container {
                 display: flex;
@@ -207,7 +243,7 @@
         }
 
         
-
+    }
             
                 
           
@@ -219,7 +255,7 @@
     
         
               
-        }
+        
     
 
 
