--- a/src/components/Navbar/NavTop.css
+++ b/src/components/Navbar/NavTop.css
@@ -20,11 +20,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex;
+  position: relative;
 }
 .app__navbar .app__navbar-search .app__navbar-box {
   box-sizing: border-box;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   width: 900px;
   height: 58px;
   background: rgba(221, 221, 221, 0.1);
