Adicionada tabela ao conteúdo da searchbar

--- a/src/components/Navbar/NavTop.scss
+++ b/src/components/Navbar/NavTop.scss
@@ -39,6 +39,19 @@
                 display: flex;
                 flex-direction: column;
                 align-items: right;
+
+                table {
+                    width: 100%;
+                    background: gold;
+
+                    a {
+                        text-decoration: none;
+                        color: #fff;
+                        
+                    }
+
+                }
+                
                 
 
                 
