--- a/src/components/Navbar/NavBot.scss
+++ b/src/components/Navbar/NavBot.scss
@@ -7,7 +7,7 @@
     background: #FFFFFF;
 
     .app__navbot-links {
-
+        z-index: 0;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -45,13 +45,7 @@
             
       }
 
-      li {
-        position: relative;
-      }
-
       a {
-        display: flex;
-        align-items: center;
         letter-spacing: 0.64px;
         text-transform: uppercase;
         text-decoration: none;
