--- a/src/components/Navbar/NavTop.scss
+++ b/src/components/Navbar/NavTop.scss
@@ -41,15 +41,51 @@
                 align-items: right;
 
                 table {
+                    z-index: 10;
+                    margin: auto;
+                    height: 40px;
                     width: 100%;
-                    background: gold;
+
+                    background: rgba(255, 215, 0);
+                    
+                    padding: 5px;
+                    
+                    border-radius: 1px;
+    
+                    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+                    animation: float 5s infinite;
+
+                    cursor: pointer;
+                    
+                    tr {
+                        text-align: center;
+                        border: 1px solid #fff;
+                        color: #666B85;
+                        font-size: 16px;
+                        font-weight: normal;
+                        text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+
+
+
+                    }
+
+                    tr:hover td {
+                        background: #373737;
+                        color:#FFFFFF;
+                        border-top: 1px solid #22262e;
+                      }
 
                     a {
                         text-decoration: none;
-                        color: #fff;
+                        color: #fff;  
+                        transition: 0.3s ease-in-out;
+                        font-family: 'Roboto', sans-serif;
+                        text-transform: uppercase;
+
                         
                     }
 
+                    
                 }
                 
                 
