--- a/src/container/Livros/Livros.scss
+++ b/src/container/Livros/Livros.scss
@@ -1,8 +1,8 @@
 .app__livros {
+   height: 600px; 
    display: flex;
    flex-direction: row;
-
-   height: 650px;
+   margin-left: 50px;
 
    justify-content: center;
    align-items: center;
@@ -29,6 +29,7 @@
 
    .app__livros-content {
     display: flex;
+    flex: 1;
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
@@ -40,19 +41,28 @@
    .app__livros-content button {
     margin-top: 1rem;
 
-    color: black;
+    color: #000;
+    background: #fff;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     letter-spacing: 0.04em;
     line-height: 28px;
     font-size: 16px;
     padding: 0.5rem 1.5rem;
-    border-radius: 1px;
-    border: none;
+    border-radius: 20px;
+    border: 1px solid #fff;
     outline: none; 
-
+    transition: 0.20s ease-in-out;
+    
     cursor: pointer;
 
+   }
+
+   .app__livros-content button:hover {
+    color: gold;
+    background: #000;
+    border-color: gold;
+   
    }
 
    .app__livros-images { 
@@ -67,12 +77,13 @@
         flex-direction: row;
         width: max-content;
         overflow-x: scroll;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
     }
+    
 
     .app__livros-container::-webkit-scrollbar {
         display: none;
-
-        
     }
 
     .app__livros-cards {
@@ -96,20 +107,20 @@
         cursor: pointer;
     }
 
+    .app__livros-cards:hover {
+        opacity: 1;
+    }
+
     .app__livros-arrows {
-        width: 100%;
+        width: 95%;
         display: flex;
+        justify-content: space-between;
         align-items: center;
-        justify-content: center;
 
-        gap: 850px;
-        
-        
+        padding: 0 1rem;
 
-        
         position: absolute;
         bottom: 5%;
-        
 
         .app__arrow-left,
         .app__arrow-right {
