--- a/src/container/Servicos/Servicos.scss
+++ b/src/container/Servicos/Servicos.scss
@@ -10,17 +10,24 @@
 
     .app__servicos-container {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 10em 1fr;
 
-        column-gap: 10px;
-        row-gap: 20px;
+        row-gap: 50px;
         
         .app__servicos-text {
             display: grid;
             align-items: center;
             justify-content: center;
             grid-column: 2;
+
+            h1 {
+                font-family: 'Roboto', sans-serif;
+                color: gold;
+                font-size: 64px;
+                line-height: 83px;
+                letter-spacing: 0.04em;
+                text-transform: uppercase;
+               }
         }
 
         .app__books {
@@ -63,14 +70,25 @@
             grid-column: 3;
             grid-row: 2;
 
-
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
         }
-            
+
+        p {
+            font-family: 'Roboto', sans-serif;
+            color: #1B1A18;
+            font-weight: 700;
+            letter-spacing: 0.04em;
+            text-transform: uppercase;
+            line-height: 29px;
+            font-size: 1rem;
+           }
         
+        a {
+            font-size: 3rem;
+            color: gold;
+        }
     }
-  
 }
