--- a/src/container/Servicos/Servicos.scss
+++ b/src/container/Servicos/Servicos.scss
@@ -1,10 +1,13 @@
 .app__servicos {
+    margin: auto;
+    padding: 50px;
+    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 600px;
+    
 
     background: #fff;
 
