--- a/src/container/Eventos/Eventos.scss
+++ b/src/container/Eventos/Eventos.scss
@@ -3,22 +3,21 @@
 
     .app__eventos-container {        
         display: grid;
-        justify-content: center;
-        justify-items: center;
+        align-items: center;
+        justify-items: left;
 
         .app__eventos-imgs {
-            padding-top: 30px;
-            padding-bottom: 30px;
+            width: 50%;
+            margin: 20px;
+            padding: 20px;
+            
+
+            border-radius: 5px;
+
             display: grid;
-
-            width: 100%;
-
-            row-gap: 10px;
-            column-gap: 20px;
-
+            gap: 20px;
             grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: 1fr 1fr 1fr;
-
 
             .app__img01 {
                 display: grid;
@@ -29,6 +28,7 @@
             }
 
             .app__img01 img {
+                position: relative;
                 width: 100%;
                 height: 100%;
             }
@@ -45,6 +45,7 @@
             }
 
             .app__img02 img {
+                position: relative;
                 width: 100%;
                 height: 100%;
             }
@@ -58,16 +59,19 @@
             }
 
             .app__img03 img {
+                
                 width: 100%;
                 height: 100%;
             }
-            
-        }
-    }
-    
 
-    img {
-        height: 300px;
-       
+            img {
+                border: 2px solid rgba(0, 0, 0, 0);
+                transition: 0.3s ease-in-out;
+            }
+
+            img:hover {
+                border: 2px solid gold;
+            }
+        }
     }
 }
