Eventos Text + Btn HTML + CSS

--- a/src/container/Livros/Livros.scss
+++ b/src/container/Livros/Livros.scss
@@ -59,7 +59,7 @@
 
    .app__livros-content button:hover {
     color: gold;
-    background: #000;
+    background: transparent;
     border-color: gold;
    
    }
