--- a/src/container/Eventos/Eventos.scss
+++ b/src/container/Eventos/Eventos.scss
@@ -1,13 +1,70 @@
 .app__eventos {
     display: grid;
 
+    grid-template-columns: 1fr 1fr;
+
+    .app__eventos-text {
+        margin: 30px;
+        padding: 20px;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        
+
+        button {
+            color: #000;
+            background: #fff;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 700;
+            letter-spacing: 0.04em;
+            line-height: 28px;
+            font-size: 16px;
+            padding: 0.5rem 1.5rem;
+            border-radius: 20px;
+            border: 1px solid #fff;
+            outline: none; 
+            transition: 0.20s ease-in-out;
+            
+            cursor: pointer;
+        }
+
+        button:hover {
+            color: gold;
+            background: transparent;
+            border-color: gold;
+           
+           }
+
+        h1 {
+            font-family: 'Roboto', sans-serif;
+            color: gold;
+            font-size: 64px;
+            line-height: 83px;
+            letter-spacing: 0.04em;
+            text-transform: uppercase;
+           }
+
+           p {
+            text-align: center;
+            font-family: 'Roboto', sans-serif;
+            color: #fff;
+            font-weight: 700;
+            letter-spacing: 0.04em;
+            text-transform: capitalize;
+            line-height: 29px;
+            font-size: 23px;
+           }
+    }
+
     .app__eventos-container {        
         display: grid;
         align-items: center;
         justify-items: left;
 
         .app__eventos-imgs {
-            width: 50%;
+            width: 100%;
             margin: 20px;
             padding: 20px;
             
@@ -73,5 +130,7 @@
                 border: 2px solid gold;
             }
         }
+
+       
     }
 }
