--- a/src/styles/Body.css
+++ b/src/styles/Body.css
@@ -5,5 +5,5 @@ body {
   font-size: 16px;
   line-height: 1.63;
   letter-spacing: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }/*# sourceMappingURL=Body.css.map */
