--- a/src/components/NavBot/NavBot.scss
+++ b/src/components/NavBot/NavBot.scss
@@ -1,9 +1,12 @@
 .app__navbot {
+    z-index: 10;
+    position: sticky;
+    top: 0;
     
-    padding: 0px 501px 8px 0px;
-
     width: 100%;
     height: 65px;
+
+    border-bottom: 1px solid rgba(55, 55, 55, 0.6);
 
     background: #FFFFFF;
 
@@ -21,8 +24,6 @@
             flex-direction: row;
             padding: 19px 17px 13px 24px;
 
-           
-            
       }
 
       .app__navbot-servicos {
@@ -47,8 +48,6 @@
             align-items: center;
             padding: 19px 17px 13px 24px; 
       }
-
-      
 
       a {
 
@@ -82,7 +81,4 @@
     
       }
     }
-
-    
-    
 }
