--- a/src/components/NavBot/NavBot.scss
+++ b/src/components/NavBot/NavBot.scss
@@ -9,41 +9,10 @@
     .app__navbot-links {
         
         display: flex;
-        flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
+        align-items: center;
 
-        gap: 30px;
-
-      .app__navbot-livros {
-          
-            display: flex;
-            flex-direction: row;
-            padding: 19px 17px 13px 24px;
-
-      }
-
-      .app__navbot-servicos {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            padding: 19px 17px 13px 24px;
-            
-      }
-
-      .app__navbot-eventos {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            padding: 19px 17px 13px 24px;
-           
-      }
-
-      .app__navbot-contatos {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            padding: 19px 17px 13px 24px; 
-      }
+        gap: 100px;
 
       a {
 
@@ -77,4 +46,18 @@
     
       }
     }
+}
+
+@media only screen and (min-width : 768px) {
+  
+  .app__navbot {
+
+    width: 885px;
+    
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+  }
+  
 }
