--- a/src/styles/Body.scss
+++ b/src/styles/Body.scss
@@ -5,6 +5,12 @@ body {
     font-size: 16px;
     line-height: 1.63;
     letter-spacing: 0;
-    overflow-x: hidden;	
+    
 }
 
+@media only screen and (min-width : 768px) {
+
+    
+  
+   
+}
