--- a/src/components/NavBot/NavBot.scss
+++ b/src/components/NavBot/NavBot.scss
@@ -1,18 +1,25 @@
 .app__navbot {   
     width: 100%;
+
     height: 65px;
 
     border-bottom: 1px solid rgba(55, 55, 55, 0.6);
 
     background: #FFFFFF;
 
-    .app__navbot-links {
-        
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-        gap: 100px;
+    
+
+    .app__navbot-links {
+        width: 100%;
+
+        display: flex;
+
+        justify-content: space-around;
+
 
       a {
 
@@ -48,16 +55,3 @@
     }
 }
 
-@media only screen and (min-width : 768px) {
-  
-  .app__navbot {
-
-    width: 885px;
-    
-    display: flex;
-
-    justify-content: center;
-    align-items: center;
-  }
-  
-}
