NavBar Responsive - 768px

--- a/src/components/NavBot/NavBot.scss
+++ b/src/components/NavBot/NavBot.scss
@@ -60,7 +60,7 @@
 @media only screen and (max-width: 768px) {
   .app__navbot {
 
-    width: 470px;
+    width: 100%;
 
     .app__navbot-links {
 
@@ -75,7 +75,7 @@
 @media only screen and (max-width: 320px) {
   .app__navbot {
 
-    width: 410px;
+    width: 100%;
 
     .app__navbot-links {
 
