--- a/src/container/Contatos/Contatos.scss
+++ b/src/container/Contatos/Contatos.scss
@@ -102,3 +102,122 @@
         }
     }
 }
+
+@media screen and (max-width: 768px) {
+
+    .app__contatos {
+        width: 100%;
+        height: 700px;
+        margin: auto;
+    
+        display: grid;
+    
+        
+        background: #fff;
+    
+        .app__contatos-container {
+            display: flex;
+    
+           justify-content: center;
+           
+    
+            .app__contatos-text {
+                display: flex;
+                flex-direction: column;
+                
+                gap: 30px;
+    
+                .app__contatos-list {
+    
+                    display: flex;
+    
+    
+                    ul {
+                        display: flex;
+                        flex-direction: column;
+                        
+                        gap: 20px;
+                    }
+                }
+    
+                .app__contatos-btn {
+                    display: flex;
+                    justify-content: center;
+    
+                    position: relative;
+    
+                   button {
+    
+                    position: absolute;
+                    width: 15%;
+                    
+                    display: flex;
+    
+                    justify-content: center;
+                    align-items: center;
+                    
+                    color: #fff;
+                    background: gold;
+                    border: 1px solid gold;
+                    border-radius: 10px;
+    
+                    font-size: 3em;
+    
+                    cursor: pointer;
+    
+                    transition: 0.3s ease-in-out
+                   }
+    
+                   button:hover {
+                    width: 30%;
+                    height: 70px;
+                    background: #fff;
+                    color: gold;
+                   }
+                }
+    
+                h1 {
+                    text-align: center;
+
+                    font-family: 'Roboto', sans-serif;
+                    color: gold;
+                    font-size: 64px;
+                    line-height: 83px;
+                    letter-spacing: 0.04em;
+                    text-transform: uppercase;
+                }
+    
+                h2 {
+                    text-align: center;
+
+                    font-family: 'Roboto', sans-serif;
+                    color: gold;
+                    font-size: 30px;
+                    line-height: 40px;
+                    letter-spacing: 0.04em;
+                    text-transform: uppercase;
+                }
+    
+                p {
+                text-align: center;
+                
+                font-family: 'Roboto', sans-serif;
+                color: #1B1A18;
+                font-weight: 700;
+                letter-spacing: 0.04em;
+                text-transform: capitalize;
+                line-height: 29px;
+                font-size: 23px;
+                }
+    
+               
+            }
+        }
+
+        .app__contatos-maps {
+            display: none;
+        }
+    }
+    
+
+}
