--- a/src/components/FooterBot/FooterBot.scss
+++ b/src/components/FooterBot/FooterBot.scss
@@ -22,4 +22,35 @@
         color: #fff;
     }
 
+    .app__footer-mobile {
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    
+    .app__footerbot {
+        .app__footerbot-container {
+            display: none;
+        }
+
+        .app__footer-mobile {
+            display: flex;
+            justify-content: space-between;
+
+            p {
+                letter-spacing: 1px;
+            }
+
+            span {
+                padding-right: 20px;
+                padding-left: 20px;
+            }
+            
+    
+        }
+    }
+   
+     
 }
