--- a/src/components/NavTop/NavTop.scss
+++ b/src/components/NavTop/NavTop.scss
@@ -339,6 +339,8 @@
 
             border: 1px solid gold;
             border-radius: 50px;
+
+            cursor: pointer;
            }
 
            .user-mobile:hover {
@@ -352,6 +354,8 @@
 
             border: 1px solid gold;
             border-radius: 50px;
+
+            cursor: pointer; 
     
            }
 
@@ -366,6 +370,8 @@
 
             border: 1px solid gold;
             border-radius: 50px;
+
+            cursor: pointer;
            }
 
            .card-mobile:hover {
