--- a/src/container/Contatos/Contatos.scss
+++ b/src/container/Contatos/Contatos.scss
@@ -221,3 +221,37 @@
     
 
 }
+
+@media screen and (max-width: 320px) {
+
+    .app__contatos {
+        width: 100%;
+        height: 700px;
+        margin: auto;
+    
+        display: grid;
+    
+        
+        background: #fff;
+    
+        .app__contatos-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+    
+            .app__contatos-text {    
+                h1 {
+                    font-size: 3rem;
+                }
+    
+                h2 {
+                    font-size: 1.5rem;
+                }
+    
+                p {
+                font-size: 0.8rem;
+                }
+            }
+        }
+    }
+}
