--- a/src/container/Livros/Livros.scss
+++ b/src/container/Livros/Livros.scss
@@ -40,7 +40,7 @@
     margin-top: 1rem;
 
     color: #000;
-    background: #fff;
+    background-color: #fff;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     letter-spacing: 0.04em;
@@ -123,7 +123,7 @@
 
         color: gold;
         font-size: 2rem;
-        background: #000;
+        background-color: #000;
         border-radius: 5px;
 
         cursor: pointer;
