Criação da lista de Livros (HTML + funcionalidade)

--- a/src/container/Contatos/Contatos.scss
+++ b/src/container/Contatos/Contatos.scss
@@ -232,7 +232,7 @@
         display: grid;
     
         
-        background: #fff;
+        background-color: #fff;
     
         .app__contatos-container {
             display: flex;
