--- a/src/container/Eventos/Eventos.scss
+++ b/src/container/Eventos/Eventos.scss
@@ -22,7 +22,7 @@
 
         button {
             color: #000;
-            background: #fff;
+            background-color: #fff;
             font-family: 'Roboto', sans-serif;
             font-weight: 700;
             letter-spacing: 0.04em;
